--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,15 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Michalł Dudek",
+            "name": "Michał Dudek",
             "email": "michal@michaldudek.pl"
         }
     ],
+     "require": {
+        "php": ">=5.3.3",
+        "splot/foundation": "dev-master",
+        "splot/framework": "dev-master"
+    },
     "autoload": {
     	"psr-0": { "Splot\\WebLogModule": "src/" }
     }
