Updated and testing the weblog module.

--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,21 @@
     ],
      "require": {
         "php": ">=5.3.3",
-        "michaldudek/foundation": "dev-master",
+        "psr/log": "1.0.*",
         "michaldudek/clog": "dev-master",
-        "splot/framework": ">=0.6"
+        "michaldudek/foundation": ">=0.9",
+        "splot/framework": ">=0.8"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.6.x-dev"
+            "dev-master": "0.8.x-dev"
         }
     },
     "minimum-stability": "dev",
     "autoload": {
-    	"psr-0": { "Splot\\WebLogModule": "src/" }
+    	"psr-4": {
+            "Splot\\WebLogModule\\Tests\\": "tests/",
+            "Splot\\WebLogModule\\": "src/"
+        }
     }
 }
