--- a/composer.json
+++ b/composer.json
@@ -5,27 +5,34 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Michał Dudek",
+            "name": "Michał Pałys-Dudek",
             "email": "michal@michaldudek.pl"
         }
     ],
      "require": {
         "php": ">=5.3.3",
-        "psr/log": "1.0.*",
+        "psr/log": "~1.0",
         "michaldudek/clog": "dev-master",
-        "michaldudek/foundation": ">=0.9",
-        "splot/framework": ">=0.8"
+        "michaldudek/foundation": ">=0.9,<2.0",
+        "splot/framework": ">=0.9,<2.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.8.x-dev"
+            "dev-master": "0.9.x-dev"
         }
     },
     "minimum-stability": "dev",
     "autoload": {
     	"psr-4": {
-            "Splot\\WebLogModule\\Tests\\": "tests/",
             "Splot\\WebLogModule\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Splot\\WebLogModule\\Tests\\": "tests/"
         }
     }
 }
